/*
 * This file defines and documents the format for config.json and other
 * top-level configuration (base.json, development.json, production.json)
 *
 * Proto doc: https://developers.google.com/protocol-buffers/
 */

syntax = "proto3"; // Must be proto3 to support JSON

message Config {
    // I'm.... actually not sure what this does. TBD
    bool debug = 1;

    // The min number of visited rooms before a guest is shown the map
    // Optional. Defaults to 0.
    int32 mapUnlockThreshold = 2;

    // What base URL to use for iframing Jitsi video calls
    // Can be overridden by "overrideJitsiServerUrlWithWindowHost" (see below)
    // Optional. If not set, "overrideJitsiServerUrlWithWindowHost" must be true.
    string jitsiServerUrl = 3;

    // Whether to use the host site for Jitsi call URLs
    // Overrides "jitsiServerUrl" (see above)
    // Optional. Defaults to false.
    bool overrideJitsiServerUrlWithWindowHost = 4;

    // Passed to Jitsi when connecting to determine whether to use SSL.
    // Optional. Defaults to false.
    bool noJitsiServerSSL = 5;

    // Whether to store state locally in the user's browser.
    // If false, reloading the page will mean rejoining as a new user.
    // Optional. Defaults to false.
    bool useLocalSessions = 6;

    // Options related to space moderators
    // Optional.
    Moderation moderation = 7;

    // ID of the room to place users when they first join
    // Required.
    string startRoom = 8;

    // Default display name in Jitsi video calls
    // Required.
    string videoDisplayName = 15;

    // Options related to username & avatar selection on the welcome page
    // Required.
    WelcomePage welcomePage = 9;

    // Sets of avatar choices
    // Required if "avatarSelectionEnabled" is true in "welcomePage".
    repeated AvatarSet avatars = 10;

    // TODO: What is this for?
    repeated AvatarSet specialAvatars = 11;

    // Options related to displaying the map
    // Required.
    MapConfig map = 12;

    // Options related to the poking feature
    // Optional. If not provided, poking is turned off.
    PokeConfig poke = 13;

    // Number of server-side proxies in use (if unsure, probably 0)
    // Required.
    int32 numProxies = 14;
}

message Moderation {
    // Contact emails for moderators to receive moderation form submissions
    // TODO: Is this currently used?
    // Required (at least one).
    repeated string moderatorEmails = 1;

    // Moderator cell phone number to receive text of form submissions
    // Required.
    string moderatorNumber = 2;

    // Description shown to users when sending moderator messages
    // Required.
    string formDescription = 3;
}

message WelcomePage {
    // Whether to have users select an avatar, or use a default for everyone
    // Optional. Defaults to false.
    bool avatarSelectionEnabled = 1;

    // What text to show on the button to join the party
    // Required.
    string enterSpaceButtonText = 2;

    // Required.
    string avatarSelectionText = 3;

    // Optional.
    string headerHtml = 4;
}

// TODO: figure this out
message AvatarSet {
    // Unique ID of this set of avatars
    string id = 1;
}

message MapConfig {
    // Options related to the stats to display above the map
    // Required.
    MapStats stats = 1;

    // TODO: What is this, and what values can it take?
    string scaleBy = 2;
}

message MapStats {
    message BuiltInStat {
        // Whether to show this stat
        // Required.
        bool display = 1;

        // Descriptive text for this stat
        // The string "{count}" will be replaced with the applicable number
        // Required. 
        string text = 2;
    }

    message AdditionalStat {
        // Descriptive text for this stat
        // The string "{count}" will be replaced with the applicable number
        // Required. 
        string text = 1;

        // A list of room IDs. Users in these rooms will be included in the count
        // Required.
        repeated string match = 2;
    }

    // Total number of users currently online
    // Required.
    BuiltInStat numberInHouse = 1;

    // Number of users not actively in a room
    // Required.
    BuiltInStat numberInHallways = 2;

    // Number of users actively in a room
    // Required.
    BuiltInStat numberInRooms = 3;

    // Additional stats to display on the map
    // Optional.
    repeated AdditionalStat additionalStats = 4;
}

message PokeConfig {
    // Header text for the poke dialog
    // Required.
    string text = 1;

    // Icon ID for the poke button
    // Required.
    string fontAwesomeIcon = 2;

    // Text to display to a user when the user is poked
    // The string "{user}" will be replaced with the poking user
    // Required.
    string fromText = 3;

    // Text to display to a user when they poke another user
    // The string "{user}" will be replaced with the poked user
    // Required.
    string toText = 4;

    // Text to display when poking is unlocked (see "unlockAfterMinutes" below)
    // Required.
    string unlockText = 5;

    // Text to display when a user pokes themself.
    // Required.
    string selfPoke = 6;

    // How long after joining that a user is allowed to use pokes
    // Required.
    int32 unlockAfterMinutes = 7;
}